login form created

--- a/src/index.css
+++ b/src/index.css
@@ -172,3 +172,28 @@ input[type=text], input[type=password], select {
 .AboutSection p{
   text-align: justify;
 }
+
+.btn-color{
+  background-color: #0e1c36;
+  color: #fff;
+  
+}
+
+.profile-image-pic{
+  height: 200px;
+  width: 200px;
+  object-fit: cover;
+}
+
+
+
+.cardbody-color{
+  background-color: #ebf2fa;
+}
+
+a{
+  text-decoration: none;
+}
+
+
+
