create our service section on home page

--- a/src/App.css
+++ b/src/App.css
@@ -42,3 +42,11 @@
 .molk {
   padding-top: 65%;
 }
+
+.car-name{
+  text-align: center;
+}
+.service-heading{
+  text-align: center;
+  padding-top:2em;
+}
