--- a/src/index.css
+++ b/src/index.css
@@ -164,7 +164,7 @@ code {
 
 /* Full-width input fields */
 input[type=text], input[type=password], select {
-  border: 1px solid #fd7e14 !important;
+  border: 1px solid #0a0909 !important;
   border-radius: 5px !important;
 }
 
