--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,7 @@
 .App-link {
   color: #61dafb;
 }
+
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap");
 
 * {
@@ -39,9 +40,9 @@
 .contact.container {
   position: relative;
   width: 100%;
-   
+
   padding: 2rem;
- 
+
   overflow: hidden;
   display: flex;
   align-items: center;
@@ -156,12 +157,12 @@ textarea.input {
   transform: translateY(0);
 }
 
-.btn {
+.btn-login {
   padding: 0.6rem 1.3rem;
-  background-color: #fff;
+  background-color: #74808b;
   border: 2px solid #fafafa;
   font-size: 0.95rem;
-  color: #1abc9c;
+  color: #fafafa;
   line-height: 1;
   border-radius: 5px;
   outline: none;
@@ -171,9 +172,9 @@ textarea.input {
   width: 100%;
 }
 
-.btn:hover {
-  background-color: transparent;
-  color: #fff;
+.btn-login:hover {
+
+  border: 1px solid;
 }
 
 .input-container span {
@@ -237,7 +238,7 @@ textarea.input {
 }
 
 .information {
-  
+
   color: #555;
   margin: 0.7rem 0;
   align-items: center;
@@ -294,16 +295,16 @@ textarea.input {
   opacity: 0.3;
 }
 
-  .big-circle {
+.big-circle {
   position: absolute;
   width: 500px;
   height: 500px;
   border-radius: 50%;
   background: linear-gradient(to bottom, #1b1c1c, #080905);
   bottom: 50%;
-   
+
   transform: translate(-60%, 49%);
-} 
+}
 
 .big-circle:after {
   content: "";
@@ -427,10 +428,11 @@ textarea.input {
   padding-top: 65%;
 }
 
-.service-heading{
+.service-heading {
   text-align: center;
   margin-top: 2em;
 }
-.car-name{
+
+.car-name {
   text-align: center;
 }
