--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,6 @@
 .App-link {
   color: #61dafb;
 }
-
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap");
 
 * {
@@ -40,9 +39,9 @@
 .contact.container {
   position: relative;
   width: 100%;
-
+   
   padding: 2rem;
-
+ 
   overflow: hidden;
   display: flex;
   align-items: center;
@@ -157,12 +156,12 @@ textarea.input {
   transform: translateY(0);
 }
 
-.btn-login {
+.btn {
   padding: 0.6rem 1.3rem;
-  background-color: #74808b;
+  background-color: #080905;
   border: 2px solid #fafafa;
   font-size: 0.95rem;
-  color: #fafafa;
+  color: #1abc9c;
   line-height: 1;
   border-radius: 5px;
   outline: none;
@@ -172,9 +171,9 @@ textarea.input {
   width: 100%;
 }
 
-.btn-login:hover {
-
-  border: 1px solid;
+.btn:hover {
+  background-color: transparent;
+  color: #8a6328;
 }
 
 .input-container span {
@@ -238,7 +237,7 @@ textarea.input {
 }
 
 .information {
-
+  
   color: #555;
   margin: 0.7rem 0;
   align-items: center;
@@ -295,16 +294,16 @@ textarea.input {
   opacity: 0.3;
 }
 
-.big-circle {
+  .big-circle {
   position: absolute;
   width: 500px;
   height: 500px;
   border-radius: 50%;
   background: linear-gradient(to bottom, #1b1c1c, #080905);
   bottom: 50%;
-
+   
   transform: translate(-60%, 49%);
-}
+} 
 
 .big-circle:after {
   content: "";
@@ -428,11 +427,32 @@ textarea.input {
   padding-top: 65%;
 }
 
-.service-heading {
-  text-align: center;
-  margin-top: 2em;
+
+
+
+.btn-login-color{
+  background-color: #0e1c36;
+  color: #fff;
+  
+}
+.btn-loginn-color:hover{
+  color: yellow;
+  background-color: #0e1c36;
+   
 }
 
-.car-name {
-  text-align: center;
+.profile-image-pic{
+  height: 200px;
+  width: 200px;
+  object-fit: cover;
+}
+
+
+
+.cardbody-color{
+  background-color: #ebf2fa;
+}
+
+a{
+  text-decoration: none;
 }
