--- a/src/App.css
+++ b/src/App.css
@@ -91,7 +91,7 @@
   position: absolute;
   width: 26px;
   height: 26px;
-  background-color: #eb0e19;
+  background-color: #fff700fc;
   transform: rotate(45deg);
   top: 50px;
   left: -13px;
@@ -122,7 +122,7 @@ form {
   border: 1px solid #0f0e0e;
   background: white;
   padding: 0.6rem 1.2rem;
-  color: #fff;
+  color: #120f0f;
   font-weight: 500;
   font-size: 0.95rem;
   letter-spacing: 0.5px;
