--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@
 
 .contact.container {
   position: relative;
-  width: 100%;
+  width: 10%;
    
   padding: 2rem;
  
@@ -46,6 +46,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.bg-warning{
+  background-color: #fac504 !important;
 }
 
 .form {
