--- a/src/App.css
+++ b/src/App.css
@@ -156,6 +156,7 @@ textarea.input {
   top: 1rem;
   transform: translateY(0);
 }
+
 .btn-login {
   padding: 0.6rem 1.3rem;
   background-color: #080905;
@@ -170,9 +171,10 @@ textarea.input {
   margin: 0;
   width: 100%;
 }
-.btn-send{
+
+.btn-send {
   padding: 0.6rem 1.3rem;
-  background-color:transparent;
+  background-color: transparent;
   border: 2px solid #fafafa;
   font-size: 0.95rem;
   color: #1abc9c;
@@ -258,6 +260,7 @@ textarea.input {
   margin: 0.7rem 0;
   align-items: center;
   font-size: 0.95rem;
+  margin: 50px;
 }
 
 .information i {
@@ -339,6 +342,18 @@ textarea.input {
   left: 50%;
   transform: translate(181%, 11%);
   opacity: 0.2;
+}
+
+.form-floating>label {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  padding: 1rem 1.5rem !important;
+  pointer-events: none;
+  border: 1px solid transparent;
+  transform-origin: 0 0;
+  transition: opacity 0.1s ease-in-out, transform 0.1s ease-in-out
 }
 
 
@@ -474,4 +489,19 @@ textarea.input {
 
 a {
   text-decoration: none;
+}
+
+.admin {
+  justify-content: center;
+}
+
+.center {
+  display: flex;
+  text-align: center;
+}
+
+.information {
+
+
+  justify-content: center;
 }
