--- a/src/App.css
+++ b/src/App.css
@@ -73,7 +73,7 @@ padding: 20px;
 }
 
 .testimonial-slider{
-  background-color: #ffc107;
+  background-color: #facc2b;
 }
 
 
@@ -786,7 +786,7 @@ a {
 }
 .testimonial-slider {
   padding: 10px 0px 40px;
-  border-radius: 60%;
+  /* border-radius: 60%; */
 }
 
 .carousel-indicators {
