--- a/src/App.css
+++ b/src/App.css
@@ -15,13 +15,14 @@
 
 @media (min-width: 710px) {
   .tabsContent table tbody tr td {
-      padding: 15px 10px 0;
-      border: 1px solid #ddd;
-      width: -webkit-fit-content;
-      width: -moz-fit-content;
-      width: fit-content;
+    padding: 15px 10px 0;
+    border: 1px solid #ddd;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
   }
 }
+
 .tabsContent table tbody tr td {
   padding: 0 3px;
   border: 1px solid #ddd;
@@ -29,71 +30,81 @@
   width: -moz-fit-content;
   width: fit-content;
 }
-*, :after, :before {
+
+*,
+:after,
+:before {
   box-sizing: border-box;
 }
-*, :after, :before {
+
+*,
+:after,
+:before {
   box-sizing: border-box;
 }
 
-.search-city{
-  width:15%;
- }
-
- .input-search{
-  width:25%;
- }
-
-@media(max-width:786px){
- .search-city{
-  width:150px;
- }
+.search-city {
+  width: 15%;
 }
 
-@media(max-width:786px){
-  .input-search{
-   width:200px;
+.input-search {
+  width: 25%;
+}
+
+@media(max-width:786px) {
+  .search-city {
+    width: 150px;
   }
- }
-  
- 
+}
+
+@media(max-width:786px) {
+  .input-search {
+    width: 200px;
+  }
+}
+
+
 td {
-display: table-cell;
-vertical-align: inherit;
-unicode-bidi: isolate;
+  display: table-cell;
+  vertical-align: inherit;
+  unicode-bidi: isolate;
 }
+
 table {
-  
-border-collapse: collapse;
+
+  border-collapse: collapse;
 }
- 
+
 table {
-border-collapse: separate;
-text-indent: initial;
-border-spacing: 2px;
+  border-collapse: separate;
+  text-indent: initial;
+  border-spacing: 2px;
 }
+
 .text-justify {
-text-align: justify !important;
+  text-align: justify !important;
 }
+
 .tabsContent {
-font-size: 13px;
-padding: 20px;
+  font-size: 13px;
+  padding: 20px;
 }
-.footer{
+
+.footer {
   background-color: #fff;
 }
 
-.web-logo{
+.web-logo {
   width: 50%;
-   
-}
- 
 
-.review{
+}
+
+
+.review {
   color: #000;
 }
 
-.testimonial-slider{
+.testimonial-slider {
   background-color: #facc2b;
 }
 
@@ -114,10 +125,7 @@ padding: 20px;
   color: #61dafb;
 }
 
-.img-fluid
-
-
-.form {
+.img-fluid .form {
   width: 100%;
   max-width: 820px;
   background-color: #fff;
@@ -262,8 +270,8 @@ textarea.input {
   border: 1px solid;
 }
 
-.logo-img{
-  width:5erm ;
+.logo-img {
+  width: 5erm;
 }
 
 .input-container span {
@@ -332,7 +340,7 @@ textarea.input {
   margin: 0.7rem 0;
   align-items: center;
   font-size: 0.95rem;
- 
+
 }
 
 .information i {
@@ -356,9 +364,8 @@ textarea.input {
   display: flex;
   margin-top: 0.5rem;
 }
-.cards{
-    
-}
+
+.cards {}
 
 .social-icons a {
   width: 35px;
@@ -386,7 +393,7 @@ textarea.input {
   bottom: -77px;
   right: 50px;
   opacity: 0.3;
- 
+
 }
 
 .big-circle {
@@ -495,7 +502,7 @@ textarea.input {
   .information,
   .social-media p {
     font-size: 0.8rem;
-   
+
   }
 
   .title {
@@ -540,7 +547,7 @@ textarea.input {
 
 
 
-.btn-loginn{
+.btn-loginn {
   background-color: #0e1c36;
   color: #fff;
 
@@ -583,48 +590,56 @@ a {
   justify-content: center;
 }
 
-.car-name{
-   text-align: center;
-   
+.car-name {
+  text-align: center;
+
 }
- 
+
 .card-effects .card-effect {
   border: none;
   background: #dee2e6;
 }
+
 .card-effects .card-effect .card-body {
-  box-shadow: 0px 5px 24.25px 0.75px rgba(0,0,0,0.1);
+  box-shadow: 0px 5px 24.25px 0.75px rgba(0, 0, 0, 0.1);
   background: #fff;
   border-bottom-right-radius: 5px;
   border-bottom-left-radius: 5px;
-   
-  
+
+
 }
+
 .card-effects .card-effect .card-img {
   position: relative;
   overflow: hidden;
 }
+
 .card-effects .card-effect:hover .card-img {
   border-top-left-radius: 5px !important;
   border-top-right-radius: 5px !important
 }
+
 .card-effects .card-effect .card-img img {
   width: 100%;
   transition: .6s
 }
+
 .card-effects .card-effect:hover .card-img img {
   transform: scale(1.2);
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
 }
+
 .card-effects .img-hover {
-    position: relative;
-    overflow: hidden
+  position: relative;
+  overflow: hidden
 }
+
 .card-effects .img-hover img {
   transition: all 2s ease;
   transform: scale(1)
 }
+
 .card-effects .img-hover:after {
   content: "";
   position: absolute;
@@ -632,6 +647,7 @@ a {
   opacity: 1;
   z-index: 3
 }
+
 .card-effects .img-hover:before {
   content: "";
   position: absolute;
@@ -642,61 +658,68 @@ a {
   right: 51%;
   bottom: -10%;
   left: 50%;
-  background: rgba(255,255,255,0.3)
+  background: rgba(255, 255, 255, 0.3)
 }
+
 .card-effects .img-hover:after {
   top: 50%;
   right: -10%;
   bottom: 50%;
   left: -10%;
-  background: rgba(255,255,255,0.6)
+  background: rgba(255, 255, 255, 0.6)
 }
+
 .card-effects .card-effect:hover .img-hover:before {
   left: 0;
   right: 0;
   opacity: 0;
   transition: all 900ms linear
 }
+
 .card-effects .card-effect:hover .img-hover:after {
   top: 0;
   bottom: 0;
   opacity: 0;
   transition: all 900ms linear
 }
+
 .card-effects .card-effect:hover .img-hover img {
-    transform: scale(1.2)
+  transform: scale(1.2)
 }
+
 .card-effects .card-btn {
-    display: inline-block;
-    padding: 14px 25px 14px 55px;
-    position: relative;
-    background-color: #ffc107;
-    color: #ffffff;
-    text-transform: capitalize;
-    border-radius: 5px;
-    font-size: 15px;
-    text-transform: uppercase;
-    font-weight: 800;
-    cursor: pointer;
-    border: none;
-    transition: 0.5s;
-    background-image: #ffc10f;
+  display: inline-block;
+  padding: 14px 25px 14px 55px;
+  position: relative;
+  background-color: #ffc107;
+  color: #ffffff;
+  text-transform: capitalize;
+  border-radius: 5px;
+  font-size: 15px;
+  text-transform: uppercase;
+  font-weight: 800;
+  cursor: pointer;
+  border: none;
+  transition: 0.5s;
+  background-image: #ffc10f;
 }
- 
+
 .card-effects .card-btn .icon-arrow {
   color: #ffffff;
   top: 16px;
-  transition: transform 0.5s cubic-bezier(0.86, 0, 0.07, 1),opacity 0.4s cubic-bezier(0.86, 0, 0.07,1);
+  transition: transform 0.5s cubic-bezier(0.86, 0, 0.07, 1), opacity 0.4s cubic-bezier(0.86, 0, 0.07, 1);
   font-size: 18px;
   backface-visibility: hidden;
   transform: translateZ(0);
   perspective: 1000
 }
+
 .card-effects .card-btn .icon-arrow.before {
   left: 20%;
   position: absolute;
   transform-origin: left center
 }
+
 .card-effects .card-btn .icon-arrow.after {
   opacity: 0;
   position: absolute;
@@ -704,25 +727,36 @@ a {
   transform: translateX(75%) scaleX(0.1);
   transform-origin: right center
 }
+
 .card-effects .card-btn.secondary {
   background-color: #ffffff
 }
-.card-effects .card-btn.secondary:hover, .card-effects .card-btn.secondary:active, .card-effects .card-btn.secondary:focus {
+
+.card-effects .card-btn.secondary:hover,
+.card-effects .card-btn.secondary:active,
+.card-effects .card-btn.secondary:focus {
   background-color: #2fbfa7
 }
+
 .card-effects .card-btn.white .icon-arrow {
   color: #2fbfa7
 }
-.card-effects .card-btn.white:hover .icon-arrow, .card-effects .card-btn.white:active .icon-arrow, .card-effects .card-btn.white:focus .icon-arrow {
+
+.card-effects .card-btn.white:hover .icon-arrow,
+.card-effects .card-btn.white:active .icon-arrow,
+.card-effects .card-btn.white:focus .icon-arrow {
   color: #fff
 }
+
 .card-effects .card-btn.md .icon-arrow {
   top: 22px;
 }
+
 .card-effects .card-btn.sm {
   padding: 10px 25px 10px 50px !important;
   font-size: 14px !important
 }
+
 .card-effects .card-btn .label {
   display: inline-block;
   transition: transform 0.5s cubic-bezier(0.86, 0, 0.07, 1);
@@ -730,48 +764,65 @@ a {
   transform: translateZ(0);
   perspective: 1000
 }
+
 .card-effects .card-btn.white {
   background-color: #ffffff;
   color: #2fbfa7
 }
+
 .card-effects .card-btn .icon-arrow.white {
   color: #2fbfa7;
   top: 16px
 }
-.card-effects .card-btn:hover, .card-effects .card-btn:active, .card-effects .card-btn:focus {
+
+.card-effects .card-btn:hover,
+.card-effects .card-btn:active,
+.card-effects .card-btn:focus {
   background-color: #ff7029;
   color: #ffffff
 }
-.card-effects .card-btn:hover .icon-arrow.before, .card-effects .card-btn:active .icon-arrow.before, .card-effects .card-btn:focus .icon-arrow.before {
+
+.card-effects .card-btn:hover .icon-arrow.before,
+.card-effects .card-btn:active .icon-arrow.before,
+.card-effects .card-btn:focus .icon-arrow.before {
   opacity: 0;
   transform: translateX(-75%) scaleX(0.1)
 }
-.card-effects .card-btn:hover .icon-arrow.after, .card-effects .card-btn:active .icon-arrow.after, .card-effects .card-btn:focus .icon-arrow.after {
+
+.card-effects .card-btn:hover .icon-arrow.after,
+.card-effects .card-btn:active .icon-arrow.after,
+.card-effects .card-btn:focus .icon-arrow.after {
   opacity: 1;
   transform: translateX(0) scaleX(1)
 }
-.card-effects .card-btn:hover .label, .card-effects .card-btn:active .label, .card-effects .card-btn:focus .label {
+
+.card-effects .card-btn:hover .label,
+.card-effects .card-btn:active .label,
+.card-effects .card-btn:focus .label {
   transform: translateX(-32px)
 }
+
 .card-effects .text-tb-lines {
-    display: grid;
-    align-items: center;
-    text-align: center;
-    gap: 10px;
-    color: #000;
+  display: grid;
+  align-items: center;
+  text-align: center;
+  gap: 10px;
+  color: #000;
 }
-.card-effects .text-tb-lines::before, .text-tb-lines::after {
+
+.card-effects .text-tb-lines::before,
+.text-tb-lines::after {
   content: '';
   border-top: 6px double;
   color: #ffe5f4;
 }
 
- .hover-underline-animation {
-  
-    
+.hover-underline-animation {
+
+
   position: relative;
-  
-  
+
+
 }
 
 .hover-underline-animation::after {
@@ -781,8 +832,8 @@ a {
   transform: scaleX(0);
   height: 2px;
   bottom: 0;
-   left: 0%;
-  right:0;
+  left: 0%;
+  right: 0;
   background-color: #ffc10f;
   transition: transform 0.25s ease-out;
 }
@@ -802,9 +853,10 @@ a {
 .testimonial-slider .carousel-indicators [data-bs-target] {
   width: 10px;
   height: 10px;
-  background-color:#000;
+  background-color: #000;
   border-radius: 100%;
 }
+
 .testimonial-slider {
   padding: 10px 0px 40px;
   /* border-radius: 60%; */
@@ -823,36 +875,38 @@ a {
   overflow: hidden;
 }
 
- 
- .carousel-inner{
+
+.carousel-inner {
   border-radius: 20px;
- }
+}
 
-  @media (max-width:786px){
-    .carousel-inner{
-      border-radius: 0%;
-    }
+@media (max-width:786px) {
+  .carousel-inner {
+    border-radius: 0%;
   }
-  .accordion-item{
-    background-color:#373534 ;
-    width: 50%;
-    margin-left: 20rem;
-       
+}
 
+.accordion-item {
+  background-color: #373534;
+  width: 50%;
+  margin-left: 20rem;
+
+
+}
+
+@media(max-width:786px) {
+  .accordion-item {
+    margin-left: 0;
+    width: 100%;
   }
 
-  @media(max-width:786px) {
-    .accordion-item{
-      margin-left: 0;
-      width: 100%;
-    }
-    
-  }
-  .accordion-button{
-    background-color: hsl(45, 100%, 51%);
-     
-  }
- 
+}
+
+.accordion-button {
+  background-color: hsl(45, 100%, 51%);
+
+}
+
 .arrow {
   font-size: 18px;
   transition: transform 0.3s ease;
@@ -861,14 +915,16 @@ a {
 .arrow.open {
   transform: rotate(90deg);
 }
- .btn{
-  border: #ffc107 solid 1px;
- }
- .btn:hover{
-  background-color: #facc2b;
- }
 
- .ratings i {
+.btn {
+  border: #ffc107 solid 1px;
+}
+
+.btn:hover {
+  background-color: #facc2b;
+}
+
+.ratings i {
   font-size: 16px;
   color: red
 }
@@ -882,9 +938,9 @@ a {
   width: 100%
 }
 
- 
 
- 
+
+
 
 h5 {
   font-weight: 400
@@ -895,28 +951,30 @@ h5 {
 }
 
 
-.dropdown-group{
-   
-   justify-content:center; 
-}
-.selectbar{
+.dropdown-group {
+
   justify-content: center;
-   
 }
 
- 
-     
+.selectbar {
+  justify-content: center;
+
+}
 
 
-  
+
+
+
+
 /* Basic styles for the dropdown container */
 .dropdown-container {
   display: flex;
-  gap: 10px;  /* Space between dropdowns */
+  gap: 10px;
+  /* Space between dropdowns */
   justify-content: center;
   flex-wrap: nowrap;
-   
-    /* Prevent wrapping of the dropdowns */
+
+  /* Prevent wrapping of the dropdowns */
 }
 
 /* Dropdown button styling */
@@ -929,8 +987,8 @@ h5 {
   cursor: pointer;
   white-space: nowrap;
   contain: content;
-  
-   
+
+
   /* Prevent text from wrapping */
 }
 
@@ -942,7 +1000,7 @@ h5 {
   box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
   min-width: 160px;
   z-index: 1;
-   
+
 }
 
 /* Style for dropdown items */
@@ -966,11 +1024,16 @@ h5 {
 /* Mobile view only (when screen width is 768px or less) */
 @media (max-width: 768px) {
   .dropdown-container {
-    overflow-x: auto;  /* Enable horizontal scrolling */
-    overflow-y: hidden; /* Hide vertical scrollbar */
-    white-space: nowrap;  /* Prevent buttons from wrapping */
-    padding: 10px 0;  /* Padding for the container */
-    -webkit-overflow-scrolling: touch;  /* Smooth scrolling on mobile */
+    overflow-x: auto;
+    /* Enable horizontal scrolling */
+    overflow-y: hidden;
+    /* Hide vertical scrollbar */
+    white-space: nowrap;
+    /* Prevent buttons from wrapping */
+    padding: 10px 0;
+    /* Padding for the container */
+    -webkit-overflow-scrolling: touch;
+    /* Smooth scrolling on mobile */
   }
 
   /* Make dropdowns behave normally on mobile */
@@ -981,17 +1044,228 @@ h5 {
   /* Dropdown content displayed below the button on mobile */
   .dropdown-content {
     position: relative;
-    box-shadow: none; /* Remove the box-shadow for better appearance */
-    background-color: #f1f1f1; /* Lighter background */
-    margin-top: 5px;  /* Add some spacing from the button */
-    width: 100%;  /* Ensure full width for mobile dropdown */
+    box-shadow: none;
+    /* Remove the box-shadow for better appearance */
+    background-color: #f1f1f1;
+    /* Lighter background */
+    margin-top: 5px;
+    /* Add some spacing from the button */
+    width: 100%;
+    /* Ensure full width for mobile dropdown */
   }
 }
 
-.detail-sm-page{
+.detail-sm-page {
   border: #000 solid 0.5px;
   margin-left: 30px;
 }
 
- 
-  
+/* css for new */
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f8f8f8;
+}
+
+.containerr {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 20px;
+}
+
+.photoss, .contactt {
+  flex: 1;
+  min-width: 300px;
+  margin: 10px;
+}
+
+.photoss {
+  max-width: 60%;
+}
+
+.photos-gallery {
+  display: flex;
+  gap: 10px;
+  overflow-x: auto;
+}
+
+.photos-gallery img {
+  width: 100px;
+  height: 100px;
+  border-radius: 8px;
+  object-fit: cover;
+}
+
+.uploadd-button {
+  margin-top: 10px;
+  background-color: #007bff;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 14px;
+}
+
+.uploadd-button:hover {
+  background-color: #0056b3;
+}
+
+.contactt {
+  max-width: 35%;
+  background: #fff;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 20px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.contactt h3 {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.contactt p {
+  font-size: 14px;
+  margin: 5px 0;
+}
+
+.contactt a {
+  color: #007bff;
+  text-decoration: none;
+}
+
+.contactt a:hover {
+  text-decoration: underline;
+}
+
+.pricee-list {
+  margin-top: 30px;
+}
+
+.pricee-list h3 {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.cards-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.cards {
+  background: #fff;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  width: 300px;
+  padding: 20px;
+  box-sizing: border-box;
+  text-align: center;
+}
+
+.cards h4 {
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+
+.cards p {
+  font-size: 14px;
+  margin-bottom: 10px;
+}
+
+.cards .price {
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.cards button {
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 14px;
+}
+
+.cards button:hover {
+  background-color: #0056b3;
+}
+
+@media (max-width: 768px) {
+  .photoss, .contactt {
+    flex: 1 1 100%;
+    max-width: 100%;
+  }
+}
+
+@media (max-width: 480px) {
+  .photos-gallery img {
+    width: 80px;
+    height: 80px;
+  }
+  .cards {
+    width: 100%;
+  }
+
+  .cards h4 {
+    font-size: 14px;
+  }
+
+  .cards p {
+    font-size: 12px;
+  }
+
+  .cards .price {
+    font-size: 14px;
+  }
+}
+
+.location-bar {
+  display: flex;
+  align-items: center;
+  padding: 10px 20px;
+  background-color: #f8f8f8;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  margin: 20px;
+}
+.location-bar .icon {
+  margin-right: 10px;
+  color: #007bff;
+}
+.location-bar h4 {
+  margin: 0;
+  font-size: 16px;
+  color: #333;
+}
+.location-options {
+  display: flex;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+  padding: 10px 0;
+  margin-left: 20px;
+}
+.location-options button {
+  border: 1px solid #ddd;
+  background-color: #fff;
+  border-radius: 20px;
+  padding: 8px 16px;
+  margin-right: 10px;
+  cursor: pointer;
+  white-space: nowrap;
+  font-size: 14px;
+  transition: background-color 0.3s ease;
+}
+.location-options button:hover {
+  background-color: #f0f0f0;
+}
+.location-options .highlight {
+  color: #007bff;
+  border-color: #007bff;
+}
