--- a/src/App.css
+++ b/src/App.css
@@ -1271,3 +1271,91 @@ body {
   color: #007bff;
   border-color: #007bff;
 }
+
+.highlights-container {
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin: 20px 0;
+}
+
+.highlights-container h2 {
+  margin-bottom: 20px;
+  font-size: 1.5rem;
+  color: #333;
+}
+
+.icons-section {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 20px;
+}
+
+.icon-item {
+  text-align: center;
+}
+
+.icon-item img {
+  width: 50px;
+  height: 50px;
+  margin-bottom: 5px;
+}
+
+.icon-item p {
+  font-size: 0.9rem;
+  color: #555;
+}
+
+.details-section {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 10px;
+  margin-bottom: 20px;
+}
+
+.detail-item {
+  flex: 1 1 45%;
+  font-size: 0.9rem;
+  color: #333;
+}
+
+.detail-item a {
+  color: #007bff;
+  text-decoration: none;
+  margin-right: 5px;
+}
+
+.detail-item a:hover {
+  text-decoration: underline;
+}
+
+.view-all-button {
+  display: block;
+  margin: 0 auto;
+  padding: 10px 20px;
+  background: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.view-all-button:hover {
+  background: #0056b3;
+}
+
+@media (max-width: 768px) {
+  .icons-section {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .details-section {
+    flex-direction: column;
+  }
+}
+.no-btn{
+  margin-left: 0.5rem
+}
