--- a/src/App.css
+++ b/src/App.css
@@ -42,19 +42,13 @@
 :before {
   box-sizing: border-box;
 }
- 
 
 .search-city {
   width: 15%;
-
-   
-  
-
 }
 
 .input-search {
   width: 25%;
-   
 }
 
 @media(max-width:786px) {
@@ -102,15 +96,7 @@ table {
 
 .web-logo {
   width: 50%;
-  
 
-}
-
-@media(max-width:786px){
-  .web-logo{
-    justify-content:center;
-  
-  }
 }
 
 
@@ -254,12 +240,12 @@ textarea.input {
   border: 2px solid #fafafa;
   font-size: 0.95rem;
   line-height: 1;
-  border-radius: 10px;
+  border-radius: 5px;
   outline: none;
   cursor: pointer;
   transition: 0.3s;
   margin: 0;
-  width: 20%;
+  width: 100%;
 }
 
 .btn-send {
@@ -564,8 +550,6 @@ textarea.input {
 .btn-loginn {
   background-color: #0e1c36;
   color: #fff;
-   width: 30%;
-    border-radius: 10px;
 
 }
 
@@ -904,9 +888,8 @@ a {
 
 .accordion-item {
   background-color: #373534;
-  width: 80%;
-  margin-left:7rem ;
-  
+  width: 50%;
+  margin-left: 20rem;
 
 
 }
@@ -977,20 +960,6 @@ h5 {
   justify-content: center;
 
 }
-.dropdown-menu{
-  background-color: #facc2b;
-  color: #fff;
-}
-.dropdown-menu:hover{
-  background-color: #fff;
-  color: #0000005f;
-}
-
- .select-tag{
-  font-size: 400px;
- }
-
-
 
 
 
@@ -1106,12 +1075,11 @@ body {
   padding: 20px;
 }
 
-.photoss,
-.contactt {
+.photoss, .contactt {
   flex: 1;
   min-width: 300px;
   margin: 10px;
-
+  
 }
 
 .photoss {
@@ -1194,11 +1162,11 @@ body {
   border: 1px solid #ddd;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  width: 240px;
+  width: 200px;
   padding: 20px;
   box-sizing: border-box;
   text-align: center;
-
+   
 }
 
 .cards h4 {
@@ -1232,9 +1200,7 @@ body {
 }
 
 @media (max-width: 768px) {
-
-  .photoss,
-  .contactt {
+  .photoss, .contactt {
     flex: 1 1 100%;
     max-width: 100%;
   }
@@ -1245,7 +1211,6 @@ body {
     width: 80px;
     height: 80px;
   }
-
   .cards {
     width: 100%;
   }
@@ -1272,18 +1237,15 @@ body {
   border-radius: 8px;
   margin: 20px;
 }
-
 .location-bar .icon {
   margin-right: 10px;
   color: #007bff;
 }
-
 .location-bar h4 {
   margin: 0;
   font-size: 16px;
   color: #333;
 }
-
 .location-options {
   display: flex;
   flex-wrap: nowrap;
@@ -1291,10 +1253,9 @@ body {
   padding: 10px 0;
   margin-left: 20px;
 }
-
 .location-options button {
-  border: 1px solid #000;
-   
+  border: 1px solid #ddd;
+  background-color: #fff;
   border-radius: 20px;
   padding: 8px 16px;
   margin-right: 10px;
@@ -1303,19 +1264,17 @@ body {
   font-size: 14px;
   transition: background-color 0.3s ease;
 }
-
 .location-options button:hover {
   background-color: #f0f0f0;
 }
-
 .location-options .highlight {
   color: #007bff;
   border-color: #007bff;
 }
 
+ 
 
-
-
+ 
 .highlights-container {
   padding: 20px;
   background-color: #fff;
@@ -1360,7 +1319,7 @@ body {
 }
 
 .detail-item {
-
+  flex: 1 1 45%;
   font-size: 0.9rem;
   color: #333;
 }
@@ -1400,8 +1359,209 @@ body {
     flex-direction: column;
   }
 }
-
-.no-btn {
+.no-btn{
   margin-left: 0.5rem
 }
 
+
+.wrapper {
+  margin: 0 auto;
+  width: 100%;
+  max-width: 1140px;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+ .ven-login {
+  position: relative;
+  width: 100%;
+  max-width: 600px;
+  height: auto;
+  display: flex;
+  background: #ffffff;
+  box-shadow: 0 0 4px #999999;
+  
+} 
+
+.credit {
+  position: relative;
+  margin: 25px auto 0 auto;
+  width: 100%;
+  text-align: center;
+  color: #666666;
+  font-size: 16px;
+  font-weight: 400;
+}
+
+.credit a {
+  color: #222222;
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.col-left,
+.col-right {
+  padding: 30px;
+  display: flex;
+}
+
+.col-left {
+  width: 60%;
+  -webkit-clip-path: polygon(0 0, 0% 100%, 100% 0);
+  clip-path: polygon(0 0, 0% 100%, 100% 0);
+  background: #f5e744;
+}
+
+.col-right {
+  padding: 60px 30px;
+  width: 50%;
+  margin-left: -10%;
+}
+
+@media(max-width: 575.98px) {
+   .ven-log {
+    flex-direction: column;
+    box-shadow: none;
+  } 
+
+  .col-left,
+  .col-right {
+    width: 100%;
+    margin: 0;
+    -webkit-clip-path: none;
+    clip-path: none;
+  }
+
+  .col-right {
+    padding: 30px;
+  }
+}
+
+.login-text {
+  position: relative;
+  width: 100%;
+  color: #ffffff;
+}
+
+.login-text h2 {
+  margin: 0 0 15px 0;
+  font-size: 30px;
+  font-weight: 700;
+}
+
+.login-text p {
+  margin: 0 0 20px 0;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 22px;
+}
+
+.login-text .btn {
+  display: inline-block;
+  padding: 7px 20px;
+  font-size: 16px;
+  letter-spacing: 1px;
+  text-decoration: none;
+  border-radius: 30px;
+  color: #000;
+  outline: none;
+  border: 1px solid #000;
+  box-shadow: inset 0 0 0 0 #ffffff;
+  transition: .3s;
+  -webkit-transition: .3s;
+}
+
+.login-text .btn:hover {
+  color: #000;
+  box-shadow: inset 150px 0 0 0 #ffffff;
+}
+
+.login-form {
+  position: relative;
+  width: 100%;
+}
+
+.login-form h2 {
+  margin: 0 0 15px 0;
+  font-size: 22px;
+  font-weight: 700;
+}
+
+.login-form p {
+  margin: 0 0 10px 0;
+  text-align: left;
+  color: #666666;
+  font-size: 15px;
+}
+
+.login-form p:last-child {
+  margin: 0;
+  padding-top: 3px;
+}
+
+.login-form p a {
+  
+  color: #000;
+  font-size: 14px;
+  text-decoration: none;
+}
+
+.login-form label {
+  display: block;
+  width: 100%;
+  margin-bottom: 2px;
+  letter-spacing: .5px;
+}
+
+.login-form p:last-child label {
+  width: 60%;
+  float: left;
+}
+
+.login-form label span {
+  color: #ff574e;
+  padding-left: 2px;
+}
+
+.login-form input {
+  display: block;
+  width: 100%;
+  height: 35px;
+  padding: 0 10px;
+  outline: none;
+  border: 1px solid #cccccc;
+  border-radius: 30px;
+}
+
+.login-form input:focus {
+  border-color: #ff574e;
+}
+
+.login-form button,
+.login-form input[type=submit] {
+  display: inline-block;
+  width: 100%;
+  margin-top: 5px;
+  color: #1b1c1c;
+  font-size: 16px;
+  letter-spacing: 1px;
+  cursor: pointer;
+  background: transparent;
+  border: 1px solid #f5e744;
+  border-radius: 30px;
+  box-shadow: inset 0 0 0 0 #f5e744;
+  transition: .3s;
+  -webkit-transition: .3s;
+}
+.vendor{
+ margin-left: 57px;
+}
+
+.login-form button:hover,
+.login-form input[type=submit]:hover {
+  color: #000;
+  box-shadow: inset 250px 0 0 0 #f5e744;
+}
