--- a/src/App.css
+++ b/src/App.css
@@ -1239,7 +1239,7 @@ body {
 
 @media (max-width: 768px) {
   .icons-section {
-    flex-direction: column;
+     
     align-items: center;
   }
 
@@ -1704,6 +1704,13 @@ body {
   background: #fff;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   outline: none;
+}
+@media(max-width:786px){
+  .nav-links{
+
+     margin-right:60px;
+
+  }
 }
 
 .login-card .btn-primary {
