--- a/src/App.css
+++ b/src/App.css
@@ -1731,6 +1731,12 @@ body {
   }
 }
 
+.nav-item:active{
+  color: #00c6ff;
+
+
+}
+
 .login-card .btn-primary {
   border-radius: 50px;
   background: linear-gradient(135deg, #ff7e5f, #feb47b);
@@ -1872,3 +1878,67 @@ body {
 .btn-primary:hover {
   background-color: #e0ae25;
 }
+
+.container,
+.container-fluid,
+.container-sm,
+.container-md,
+.container-lg,
+.container-xl,
+.container-xxl {
+    width: 100%;
+    padding-right: var(--bs-gutter-x, .75rem);
+    padding-left: var(--bs-gutter-x, .75rem);
+    margin-right: auto;
+    margin-left: auto
+}
+
+@media (min-width: 576px) {
+
+    .container,
+    .container-sm {
+        max-width: 540px
+    }
+}
+
+@media (min-width: 768px) {
+
+    .container,
+    .container-sm,
+    .container-md {
+        max-width: 720px
+    }
+}
+
+@media (min-width: 992px) {
+
+    .container,
+    .container-sm,
+    .container-md,
+    .container-lg {
+        max-width: 960px
+    }
+}
+
+@media (min-width: 1200px) {
+
+    .container,
+    .container-sm,
+    .container-md,
+    .container-lg,
+    .container-xl {
+        max-width: 1140px
+    }
+}
+
+@media (min-width: 1400px) {
+
+
+    .container-sm,
+    .container-md,
+    .container-lg,
+    .container-xl,
+    .container-xxl {
+        max-width: 1320px
+    }
+} 
