--- a/public/assets/css/style-1.css
+++ b/public/assets/css/style-1.css
@@ -74,9 +74,10 @@
     width: 250px;
     height: 100vh;
     overflow-y: auto;
-    background: var(--light);
+    background: #6b7280;
     transition: 0.5s;
     z-index: 999;
+    border-right: 2px solid #ff5e00;
 }
 
 .content {
@@ -122,15 +123,35 @@
 
 
 /*** Navbar ***/
+.sidebar .navbar, .content .navbar {
+    background-color: #6b7280;
+}
+.content .navbar {
+    background-color: #6b7280;
+    border-bottom: 2px solid #ff5e00;
+}
+
+.bg-orange {
+    background-color: #f97316 !important
+}
+
+.text-orange {
+    background-color: #f97316 !important
+}
+
 .sidebar .navbar .navbar-nav .nav-link {
     padding: 7px 20px;
-    color: var(--dark);
+    color: white;
     font-weight: 500;
     border-left: 3px solid var(--light);
     border-radius: 0 30px 30px 0;
     outline: none;
 }
- 
+
+.sidebar .navbar .navbar-nav .nav-link i {
+    color: var(--dark);
+}
+
 
 .sidebar .navbar .navbar-nav .nav-link:hover,
 .sidebar .navbar .navbar-nav .nav-link.active {
@@ -177,13 +198,14 @@
 .content .navbar .navbar-nav .nav-link {
     margin-left: 25px;
     padding: 12px 0;
-    color: var(--dark);
+    font-weight: bold;
+    color: #fff;
     outline: none;
 }
 
 .content .navbar .navbar-nav .nav-link:hover,
 .content .navbar .navbar-nav .nav-link.active {
-    color: var(--primary);
+    color: var(--dark);
 }
 
 .content .navbar .sidebar-toggler,
